added session controller, update swagger: request accept only json, fixed user controller for handling both html views and json api
