# app/controllers/users_controller.rb
@@ -1,5 +1,8 @@
 class UsersController < ApplicationController
-    skip_before_action :verify_authenticity_token, only: [:create, :destroy]
+
+    before_action :authenticate_user_from_token!, only: [:update, :destroy]
+    skip_before_action :verify_authenticity_token, if: -> { request.format.json? }
+
 
     def index
         render json: @users = User.all
@@ -7,18 +10,39 @@ class UsersController < ApplicationController
 
     def show
         @user = User.find(params[:id])
-        render json: @user, status: :ok
+        if @user
+            render json: @user, status: :ok
+        else
+            format.json { render json: { errors: @user.errors.full_messages }, status: :not_found }
+        end
+
+        rescue => e
+        respond_to do |format|
+            format.html { redirect_to login_or_register_path, alert: "An error occurred: #{e.message}" }
+            format.json { render json: { error: "An error occurred: #{e.message}" }, status: :unprocessable_entity }
+        end
     end
 
     def create
         @user = User.new(user_params)
 
+    respond_to do |format|
         if @user.save
-        render json: @user, status: :created
+        format.json { render json: @user, status: :created }
+        format.html { redirect_to login_or_register_path, notice: 'User was successfully created.' }
+
         else
-        render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity
+        format.html { render :new }
+        format.json { render json: { errors: @user.errors.full_messages }, status: :unprocessable_entity }
         end
     end
+    rescue => e
+    respond_to do |format|
+        format.html { redirect_to login_or_register_path, alert: "An error occurred: #{e.message}" }
+        format.json { render json: { error: "An error occurred: #{e.message}" }, status: :unprocessable_entity }
+    end
+    end
+
 
     def update
         @user = User.find(params[:id])
@@ -40,10 +64,24 @@ class UsersController < ApplicationController
             render json: { errors: ['User not found'] }, status: :unprocessable_entity
         end
     end
-
     private
 
+    # Only allow a list of trusted parameters through.
     def user_params
-        params.require(:user).permit(:username, :name, :surname, :birthdate, :phone_number, :email_address, :password_digest, :state, :city, :address)
+        params.require(:user).permit(:username, :name, :surname, :birthdate, :phone_number, :email_address, :password, :state, :city, :address)
     end
+
+    # Token-based authentication for API endpoints
+    def authenticate_user_from_token!
+       
+        token = request.headers['Authorization'].to_s.split(' ').last
+        user = User.find_by(authentication_token: token)
+
+        if user
+        sign_in user, store: false # Assuming you're using Devise for authentication
+        else
+        render json: { error: 'Invalid token' }, status: :unauthorized
+        end
+    end
+
 end
